--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.4",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-masonry-css": "^1.0.16",
+    "react-responsive-masonry": "^2.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
